FreeST/test/Programs/InvalidTests/Polymorphism/ImplicitSessionVar/ImplicitSessionVar.fst
f : !a;b -> a -> b 
f c x = send x c 